[project]
name = "daily_ai_podcast"
version = "0.1.0"
description = "Generate a daily podcast of the top AI papers using NotebookLM"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.7.2",
    "playwright>=1.35.0",
    "asyncio>=3.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/daily_ai_podcast"]

[project.scripts]
daily-ai-podcast = "daily_ai_podcast.main:main"
